@@ -1,5 +1,10 @@
 2013-03-06  Sergio Martin <sergio.martin@artica.es>
 
+	* lib/PandoraFMS/Core.pm: Add macros substitution in all the
+	text fields of generate event command
+
+2013-03-06  Sergio Martin <sergio.martin@artica.es>
+
 	* lib/PandoraFMS/Core.pm: Change the update count of fired alerts 
 	condition to increase the count only when a alert is fired first time
 	to avoid broke counts
